# lumio

./: .env.example  .envrc  .gitignore  .gitleaks.toml  AD_TYPES_INVESTIGATION.md  AGENTS.md  AUDIT_REPORT.md  BACKEND_CHECKLIST.md  BRANDING_UPDATE_SUMMARY.md  CHANGELOG.md  CHANGES.md  FIX_REPORT.md  NEW_DART_DEFINES.env  PERFORMANCE_FIXES_APPLIED.md  PERFORMANCE_INVESTIGATION.md  PHASES_5_8_INVESTIGATION.md  PHASES_5_8_SUMMARY.md  README.md  RELEASE_SIGNING.md  RUN_ADS.md  SECRETS_REPORT.md  SESSION_SUMMARY.md  SIMPLIFIED_UPDATE_MECHANISM.md  UNITY_ADS_INTEGRATION_DELIVERABLES.md  UPDATE_MECHANISM_INVESTIGATION.md  analysis_options.yaml  ci_defines.json  mainauditreport.md  publish_apk_to_appwrite.py  pubspec.yaml  pubspec.yaml.bak  run  secrets.json  secrets.json.template  version.json
android/: build.gradle.kts  gradle.properties  key.properties.example  key.properties.template  local.properties.template  settings.gradle.kts
android/app/src/main/cpp/: CMakeLists.txt  secrets.cpp
data/: special_links.json
docs/: ACCESSIBILITY_GUIDELINES.md  ADSTERRA_TELEMETRY_API.md  ADS_INVENTORY_REPORT.md  ADS_README.md  ADS_SETUP.md  ADS_SPRINT_2026_06_08.md  AD_DASHBOARD_QUERIES.md  AD_PLACEMENT_GAP_ANALYSIS.md  AD_TESTING.md  AD_WATERFALL.md  AD_ZONE_INVENTORY.md  ANDROID_SIZE_AND_PERFORMANCE.md  APK_SIZE_REDUCTION_PLAN.md  APPWRITE_WORLD_CUP_CARDS.md  APP_ADS_TXT_TEMPLATE.md  APP_PROVIDER_MIGRATION_PLAN.md  AUDIT_REPORT_v2.md  B6_RELEASE_BUILD.md  BACKEND_STREAM_TOKEN_CONTRACT.md  BACKEND_VERIFICATION.md  BACKEND_WALLET_API.md  BRANCH_POLICY.md  BRAND_VOICE_AUDIT.md  (+102 more)
(+504 files in other folders)
